fix: no link label not centered

--- a/src/components/Links/links.module.scss
+++ b/src/components/Links/links.module.scss
@@ -14,6 +14,7 @@
   & p {
     min-width: 0;
     width: 100%;
+    text-align: center;
     text-overflow: ellipsis;
     text-align: center;
     white-space: nowrap;
